--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
 			<artifactId>spex</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
 	</dependencies>
 </project>
